add address query and more deposit info, upgrade to 1.0.5
