# api.ts
@@ -4,7 +4,7 @@
  * MVC Bridge API Spec
  * API definition for Mvc Bridge provided apis
  *
- * The version of the OpenAPI document: 1.0.4
+ * The version of the OpenAPI document: 1.0.5
  * Contact: heqiming@metasv.com
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -43,6 +43,24 @@ export interface DepositAddressResponse {
      * @memberof DepositAddressResponse
      */
     tokenName?: string;
+    /**
+     * The decimal of the token.
+     * @type {number}
+     * @memberof DepositAddressResponse
+     */
+    decimal?: number;
+    /**
+     * The minimum amount of the token to deposit, if deposit amount is lower than this, it will not be processed.
+     * @type {number}
+     * @memberof DepositAddressResponse
+     */
+    minAmount?: number;
+    /**
+     * The confirmation needed for the deposit transaction.
+     * @type {number}
+     * @memberof DepositAddressResponse
+     */
+    confirmation?: number;
 }
 /**
  * Register a bridging request.
